--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -87,9 +87,6 @@
     <ClCompile Include="render_manager\2d_sprite_object__tst.cc">
       <Filter>Source Files\render_manager</Filter>
     </ClCompile>
-    <ClCompile Include="resource_manager\resource.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="scene_manager\2d_layer__tst.cc">
       <Filter>Source Files\scene_manager</Filter>
     </ClCompile>
@@ -109,6 +106,15 @@
       <Filter>Source Files\render_manager</Filter>
     </ClCompile>
     <ClCompile Include="engine\engine_object__tst.cc">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="resource_manager\resource.cpp">
+      <Filter>Source Files\resource_manager</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\engine.cc">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\engine__tst.cc">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
   </ItemGroup>
