--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ research/*
 witchcraft_sln/witchcraft/scene_manager/__scene_listener.h
 witchcraft_sln/witchcraft/scene_manager/__2d_scene_manager.h
 *.pdf
+witchcraft_sln/Untitled (Recovered).bmp
