--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ witchcraft_sln/witchcraft/scene_manager/__scene_listener.h
 witchcraft_sln/witchcraft/scene_manager/__2d_scene_manager.h
 *.pdf
 witchcraft_sln/Untitled (Recovered).bmp
+witchcraft_sln/__hopes/Untitled (Recovered).bmp
