--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -131,15 +131,15 @@
     <ClCompile Include="entry_point.cc" />
     <ClCompile Include="logging\error_log_manager.cc" />
     <ClCompile Include="logging\tests_error_log_manager.cc" />
-    <ClCompile Include="render_manager\2d_render_manager.cc" />
-    <ClCompile Include="render_manager\2d_render_manager__tst.cc" />
-    <ClCompile Include="render_manager\2d_render_object.cc" />
-    <ClCompile Include="render_manager\2d_render_object__tst.cc" />
-    <ClCompile Include="render_manager\2d_sprite_animation__tst.cc" />
-    <ClCompile Include="render_manager\2d_sprite_object.cc" />
-    <ClCompile Include="render_manager\2d_sprite_object__tst.cc" />
+    <ClCompile Include="render_manager\render_manager_2d.cc" />
+    <ClCompile Include="render_manager\render_manager_2d__tst.cc" />
+    <ClCompile Include="render_manager\render_object_2d.cc" />
+    <ClCompile Include="render_manager\render_object_2d__tst.cc" />
     <ClCompile Include="render_manager\render_resource.cc" />
     <ClCompile Include="render_manager\render_resource__tst.cc" />
+    <ClCompile Include="render_manager\sprite_animation_2d__tst.cc" />
+    <ClCompile Include="render_manager\sprite_object_2d.cc" />
+    <ClCompile Include="render_manager\sprite_object_2d__tst.cc" />
     <ClCompile Include="resource_manager\resource.cpp" />
     <ClCompile Include="resource_manager\resource_manager.cc" />
     <ClCompile Include="resource_manager\resource_manager__tst.cc" />
@@ -159,13 +159,13 @@
     <ClInclude Include="engine\engine_object.h" />
     <ClInclude Include="engine\exception.h" />
     <ClInclude Include="logging\error_log_manager.h" />
-    <ClInclude Include="render_manager\2d_render_manager.h" />
-    <ClInclude Include="render_manager\2d_render_object.h" />
-    <ClInclude Include="render_manager\2d_sprite_animation.h" />
-    <ClInclude Include="render_manager\2d_sprite_object.h" />
     <ClInclude Include="render_manager\animation_resource.h" />
+    <ClInclude Include="render_manager\render_manager_2d.h" />
     <ClInclude Include="render_manager\render_manager_base.h" />
+    <ClInclude Include="render_manager\render_object_2d.h" />
     <ClInclude Include="render_manager\render_resource.h" />
+    <ClInclude Include="render_manager\sprite_animation_2d.h" />
+    <ClInclude Include="render_manager\sprite_object_2d.h" />
     <ClInclude Include="resource_manager\resource.h" />
     <ClInclude Include="resource_manager\resource_manager.h" />
     <ClInclude Include="scene_manager\2d_layer.h" />
