--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ zip/*
 witchcraft_sln/__design/act structure dark souls.png
 witchcraft_sln/__design/act structure.png
 witchcraft_sln/__design/people are like this.png
+art_style/*
+design_space/*
+witchcraft_sln/__hopes/*
+witchcraft_sln/__design/*
