--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ witchcraft_sln/__hopes/Untitled (Recovered).bmp
 witchcraft_sln/lib/SDL2/SDL2_mixer-2.0.4/*
 witchcraft_sln/lib/SDL2/SDL2_net-2.0.1/*
 zip/*
+art_style/*
