--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ witchcraft_sln/lib/SDL2/SDL2_mixer-2.0.4/*
 witchcraft_sln/lib/SDL2/SDL2_net-2.0.1/*
 zip/*
 art_style/*
+design_space/*
+witchcraft_sln/__design/*
+witchcraft_sln/__hopes/*
+371c10da0b42e35bfffb5c9ea1d14196.jpg
+desmos-graph.png
+thematic_target - build a game mechanic around this.jpg
