--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ witchcraft_sln/__design/*
 thematic_target - build a game mechanic around this.jpg
 desmos-graph.png
 371c10da0b42e35bfffb5c9ea1d14196.jpg
+tilesets/bubble emotes july update.png
