--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -137,6 +137,7 @@
     <ClCompile Include="render_manager\render_object_2d__tst.cc" />
     <ClCompile Include="render_manager\render_resource.cc" />
     <ClCompile Include="render_manager\render_resource__tst.cc" />
+    <ClCompile Include="render_manager\sprite_atlas_resource__tst.cc" />
     <ClCompile Include="render_manager\sprite_animation_2d__tst.cc" />
     <ClCompile Include="render_manager\sprite_object_2d.cc" />
     <ClCompile Include="render_manager\sprite_object_2d__tst.cc" />
@@ -160,11 +161,11 @@
     <ClInclude Include="engine\engine_object.h" />
     <ClInclude Include="engine\exception.h" />
     <ClInclude Include="logging\error_log_manager.h" />
-    <ClInclude Include="render_manager\animation_resource.h" />
     <ClInclude Include="render_manager\render_manager_2d.h" />
     <ClInclude Include="render_manager\render_manager_base.h" />
     <ClInclude Include="render_manager\render_object_2d.h" />
     <ClInclude Include="render_manager\render_resource.h" />
+    <ClInclude Include="render_manager\sprite_atlas_resource.h" />
     <ClInclude Include="render_manager\sprite_animation_2d.h" />
     <ClInclude Include="render_manager\sprite_object_2d.h" />
     <ClInclude Include="resource_manager\resource.h" />
