--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="scene_manager\scene_manager_2d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="render_manager\sprite_atlas_resource__tst.cc">
+      <Filter>Source Files\render_manager</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\engine.h">
@@ -167,9 +170,6 @@
     <ClInclude Include="uninitialized_values.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="render_manager\animation_resource.h">
-      <Filter>Source Files\render_manager</Filter>
-    </ClInclude>
     <ClInclude Include="engine\engine_object.h">
       <Filter>Source Files\engine</Filter>
     </ClInclude>
@@ -193,6 +193,9 @@
     </ClInclude>
     <ClInclude Include="scene_manager\scene_manager_2d.h">
       <Filter>Source Files\scene_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="render_manager\sprite_atlas_resource.h">
+      <Filter>Source Files\render_manager</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
