Added message bus class

--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="engine\engine_object.h" />
     <ClInclude Include="engine\exception.h" />
     <ClInclude Include="logging\error_log_manager.h" />
+    <ClInclude Include="message_bus\message_bus.h" />
     <ClInclude Include="render_manager\render_manager_2d.h" />
     <ClInclude Include="render_manager\render_manager_base.h" />
     <ClInclude Include="render_manager\render_object_2d.h" />
