--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -197,5 +197,8 @@
     <ClInclude Include="render_manager\sprite_atlas_resource.h">
       <Filter>Source Files\render_manager</Filter>
     </ClInclude>
+    <ClInclude Include="message_bus\message_bus.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
