--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,4 @@ witchcraft_sln/witchcraft/asset/golf_game/*
 witchcraft_sln/witchcraft/asset/tennis_game/*
 witchcraft_sln/witchcraft/asset/car_game/*
 witchcraft_sln/witchcraft/asset/smalltown/*
+witchcraft_sln/lib/imgui/*
