--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -132,8 +132,8 @@
     <ClCompile Include="logging\error_log_manager.cc" />
     <ClCompile Include="logging\tests_error_log_manager.cc" />
     <ClCompile Include="message_bus\message_bus__tst.cc" />
-    <ClCompile Include="render_manager\render_manager_2d.cc" />
-    <ClCompile Include="render_manager\render_manager_2d__tst.cc" />
+    <ClCompile Include="render_manager\render_manager.cc" />
+    <ClCompile Include="render_manager\render_manager__tst.cc" />
     <ClCompile Include="render_manager\render_object_2d.cc" />
     <ClCompile Include="render_manager\render_object_2d__tst.cc" />
     <ClCompile Include="render_manager\render_resource.cc" />
@@ -165,7 +165,7 @@
     <ClInclude Include="message_bus\ICanReceiveMessages.h" />
     <ClInclude Include="message_bus\ICanSendMessages.h" />
     <ClInclude Include="message_bus\message_bus.h" />
-    <ClInclude Include="render_manager\render_manager_2d.h" />
+    <ClInclude Include="render_manager\render_manager.h" />
     <ClInclude Include="render_manager\render_manager_base.h" />
     <ClInclude Include="render_manager\render_object_2d.h" />
     <ClInclude Include="render_manager\render_resource.h" />
