--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,4 @@ witchcraft_sln/witchcraft/asset/tennis_game/*
 witchcraft_sln/witchcraft/asset/car_game/*
 witchcraft_sln/witchcraft/asset/smalltown/*
 witchcraft_sln/lib/imgui/*
+witchcraft_sln/lib/SDL2/*
