--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ witchcraft_sln/witchcraft/asset/car_game/*
 witchcraft_sln/witchcraft/asset/smalltown/*
 witchcraft_sln/lib/imgui/*
 witchcraft_sln/lib/SDL2/*
+witchcraft_sln/witchcraft/imgui/*
