--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ witchcraft_sln/lib/SDL2/*
 witchcraft_sln/witchcraft/imgui/*
 witchcraft_sln/witchcraft/imgui.ini
 witchcraft_sln/profiling/*
+witchcraft_sln/Witchcraft.psess
+witchcraft_sln/Witchcraft200907.vspx
