Shader class code
1. this isn't commented out, but it's also not hooked up

2. In order to call the open gl fns, we have to have an opengl context.  The context isn't created during the unit test phase.  Our options are basically:

a. create an open GL context in unit test phase, and tear it back down before starting the main program

b. don't run unit tests on shader compilation, and rely on errors to come out correctly in logs)

I'm not sure what to do, so I'm gonna think about it for a while, then decide

3. other work:

a. OpenGLShaderProgram is split into small fns, and I feel good about it overall
b. class is starting to deviate from the tutorial code I was using to build it, which is also good

--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -139,6 +139,8 @@
     <ClCompile Include="logging\error_log_manager.cc" />
     <ClCompile Include="logging\tests_error_log_manager.cc" />
     <ClCompile Include="message_bus\message_bus__tst.cc" />
+    <ClCompile Include="render_manager\opengl_shader.cc" />
+    <ClCompile Include="render_manager\opengl_shader__tst.cc" />
     <ClCompile Include="render_manager\render_manager.cc" />
     <ClCompile Include="render_manager\render_manager__tst.cc" />
     <ClCompile Include="render_manager\render_object_2d.cc" />
@@ -181,6 +183,7 @@
     <ClInclude Include="message_bus\ICanReceiveMessages.h" />
     <ClInclude Include="message_bus\ICanSendMessages.h" />
     <ClInclude Include="message_bus\message_bus.h" />
+    <ClInclude Include="render_manager\opengl_shader.h" />
     <ClInclude Include="render_manager\render_manager.h" />
     <ClInclude Include="render_manager\render_manager_base.h" />
     <ClInclude Include="render_manager\render_object_2d.h" />
