--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -66,9 +66,6 @@
     <ClCompile Include="utility\tests_utility.cc">
       <Filter>Source Files\utility</Filter>
     </ClCompile>
-    <ClCompile Include="render_manager\render_resource.cc">
-      <Filter>Source Files\render_manager</Filter>
-    </ClCompile>
     <ClCompile Include="resource_manager\resource__tst.cc">
       <Filter>Source Files\resource_manager</Filter>
     </ClCompile>
@@ -165,6 +162,9 @@
     <ClCompile Include="render_manager\opengl_shader.cc">
       <Filter>Source Files\render_manager</Filter>
     </ClCompile>
+    <ClCompile Include="render_manager\sld_render_resource.cc">
+      <Filter>Source Files\render_manager</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="engine\engine.h">
@@ -189,9 +189,6 @@
       <Filter>Source Files\utility</Filter>
     </ClInclude>
     <ClInclude Include="render_manager\render_manager_base.h">
-      <Filter>Source Files\render_manager</Filter>
-    </ClInclude>
-    <ClInclude Include="render_manager\render_resource.h">
       <Filter>Source Files\render_manager</Filter>
     </ClInclude>
     <ClInclude Include="scene_manager\scene_object.h">
@@ -274,6 +271,15 @@
     </ClInclude>
     <ClInclude Include="render_manager\opengl_shader.h">
       <Filter>Source Files\render_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="render_manager\sdl_render_resource.h">
+      <Filter>Source Files\render_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="render_manager\opengl_texture.h">
+      <Filter>Source Files\render_manager</Filter>
+    </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
