Engine ID changes
1. these changes are just finishing up the engine id update

--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj.filters
@@ -290,5 +290,8 @@
     <ClInclude Include="project_loader\project_loader.h">
       <Filter>Source Files\project_loader</Filter>
     </ClInclude>
+    <ClInclude Include="engine\engine_id.h">
+      <Filter>Source Files\engine</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
