--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -170,6 +170,7 @@
   <ItemGroup>
     <ClInclude Include="console\console.h" />
     <ClInclude Include="engine\engine.h" />
+    <ClInclude Include="engine\engine_id.h" />
     <ClInclude Include="engine\engine_object.h" />
     <ClInclude Include="engine\exception.h" />
     <ClInclude Include="imgui\imconfig.h" />
