--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ witchcraft_sln/witchcraft/imgui.ini
 witchcraft_sln/profiling/*
 witchcraft_sln/Witchcraft.psess
 witchcraft_sln/Witchcraft200907.vspx
+witchcraft_sln/witchcraft/witchcraft - Shortcut.lnk
