--- a/witchcraft_sln/witchcraft/asset/soccer_game/soccer_game.project
+++ b/witchcraft_sln/witchcraft/asset/soccer_game/soccer_game.project
@@ -1,8 +1,11 @@
 // this is a comment mark
 // comment marks ALL, MUST be on their own line
 // also, be sure to only use lower case for variable names or values
+// NOTE: anything that starts with "path:" has all whitespace cleared
+
 
 // configuration
+// holds general information used by the project
 window_pos: 0, 0
 window_wh: 800, 600
 window_fullscreen: true
@@ -11,4 +14,46 @@ use_vsync: false
 
 
 // project files
-[path]:
+// a list of asset files (not technically assets)
+// asset files contain information for how different assets
+// should be processed
+
+// a monologue about lying to a kid in cambodia
+path: /asset/dialogue/cambodia_sadness.asset
+
+// graphics
+path: /asset/images/basic_shader.asset
+
+path: /asset/images/ball.asset
+path: /asset/images/ball_shadow.asset
+path: /asset/images/cursor.asset
+path: /asset/images/player_shadow.asset
+path: /asset/images/stadium.asset
+
+// this file contains animations
+path: /asset/images/player_a.asset
+
+
+// sfx
+// Ellie's note: not sure if we should really have a different <.asset>
+// file for each sfx file.  I mean, we can, but I think all the sfx are
+// just "play now" kind of interactions, and we'll be delivering the whole
+// lot of them to the audio manager anyway
+// TODO: figure out a reasonable, concise way to do that
+//path: /asset/sounds/jump_p1.asset
+//path: /asset/sounds/jump_p2.asset
+//path: /asset/sounds/jump_p3.asset
+//path: /asset/sounds/jump_p4.asset
+//path: /asset/sounds/kick_a.asset
+//path: /asset/sounds/kick_b.asset
+//path: /asset/sounds/menu_p1.asset
+//path: /asset/sounds/menu_p2.asset
+//path: /asset/sounds/menu_p3.asset
+//path: /asset/sounds/menu_p4.asset
+//path: /asset/sounds/menu_selection_click.asset
+//path: /asset/sounds/open_00.asset
+//path: /asset/sounds/open_01.asset
+//path: /asset/sounds/phone.asset
+//path: /asset/sounds/pickup.asset
+//path: /asset/sounds/success.asset
+//path: /asset/sounds/win.asset
