Ignoring special enum tools file for now
Re-evaluate whether we should have this

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ witchcraft_sln/profiling/*
 witchcraft_sln/Witchcraft.psess
 witchcraft_sln/Witchcraft200907.vspx
 witchcraft_sln/witchcraft/witchcraft - Shortcut.lnk
+witchcraft_sln/witchcraft/engine/enum_tools.h
