--- a/witchcraft_sln/witchcraft/Witchcraft.vcxproj
+++ b/witchcraft_sln/witchcraft/Witchcraft.vcxproj
@@ -172,6 +172,7 @@
     <ClInclude Include="engine\engine.h" />
     <ClInclude Include="engine\engine_id.h" />
     <ClInclude Include="engine\engine_object.h" />
+    <ClInclude Include="engine\enum_tools.h" />
     <ClInclude Include="engine\exception.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
