--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,4 @@ witchcraft_sln/Witchcraft.psess
 witchcraft_sln/Witchcraft200907.vspx
 witchcraft_sln/witchcraft/witchcraft - Shortcut.lnk
 witchcraft_sln/witchcraft/engine/enum_tools.h
+witchcraft_sln/docs/*
